--- a/ch1/hint/templates/hint/theme_list.html
+++ b/ch1/hint/templates/hint/theme_list.html
@@ -10,12 +10,11 @@
 <div class="container mt-5">
     <div class="text-center mt-5">
         <h4 class="mt-5">{{ escape_room }}</h4>
-        <h3 class="mt-1 mb-5">테마선택</h3>
+        <h3 class="mt-1 mb-5">테마 선택</h3>
         <div class="row">
             {% for i in themes %}
             <div class="col-6 mt-5">
-                <a style="color:black; text-decoration:none;color:white;" href="{% url 'hint:QR_code' user_id i.name %}"><h3 class="mb-0">{{ i.name }}</h3></a>
-                <a style="text-decoration:none;color:white" href="{% url 'hint:theme_edit' user_id i.name %}"><span>수정</span></a>
+                <h4 class="my-5"><a style="color:black; text-decoration:none;color:white;" href="{% url 'hint:QR_code' user_id i.name %}">{{ i.name }}</a></h4>
             </div>
             {% endfor %}
         </div>
