--- a/ch1/mysite/templates/base.html
+++ b/ch1/mysite/templates/base.html
@@ -9,6 +9,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+        <!-- fontawesome -->
+        {% load static %}
+        <script src="{% static 'fontawesome.js' %}"></script>
     </head>
     <style>
         body{
