--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -25,7 +25,7 @@
     <h2 class="m-0">{{ theme }}</h2>
     <input style="visibility:hidden;" id="text" type="url" size=16 placeholder="Tracking Code" class="qrcode-text">
     <label class="qrcode-text-btn">
-        <input id="g" type=file accept="image/*" capture="camera" tabindex=-1>
+        <input class="camera" id="g" type=file accept="image/*" capture="camera" tabindex=-1>
     </label>
     <div class="row mt-3">
         <div class="col-2"></div>
@@ -111,8 +111,8 @@
         }
     }
     $(function(){
-        $('#camera').change(function(e){
-            openQRCamera(URL.createObjectURL(e.target.files[0]));
+        $('.camera').change(function(e){
+            openQRCamera(e.target);
         });
     });
     history.pushState(null, null, location.href);
