--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -111,7 +111,7 @@
         }
     }
     function android(){
-        window.android.capture();
+        window.Android.capture();
     }
     //$(function(){
     //    $('.camera').change(function(e){
