--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -24,9 +24,7 @@
     <span>{{ escape_room }}</span>
     <h2 class="m-0">{{ theme }}</h2>
     <input style="visibility:hidden;" id="text" type="url" size=16 placeholder="Tracking Code" class="qrcode-text">
-    <label class="qrcode-text-btn">
-        <input onclick="android();" class="camera" id="g" type=file accept="image/*" capture="camera" tabindex=-1>
-    </label>
+    <button type="button" onclick="android();"><img src="{% static 'qr.png' %}"></button>
     <div class="row mt-3">
         <div class="col-2"></div>
         <div class="col-8">
