--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -24,7 +24,7 @@
     <span>{{ escape_room }}</span>
     <h2 class="m-0">{{ theme }}</h2>
     <input style="visibility:hidden;" id="text" type="url" size=16 placeholder="Tracking Code" class="qrcode-text">
-    <button style="background-color:black;border-color:black" type="button" onclick="android();"><img src="{% static 'qr.png' %}"></button>
+    <input style="background-color:black;border-color:black" type="button" onclick="android();"><img src="{% static 'qr.png' %}">
     <div class="row mt-3">
         <div class="col-2"></div>
         <div class="col-8">
