--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -23,13 +23,13 @@
 <div class="container text-center my-4 p-3">
     <span>{{ escape_room }}</span>
     <h2 class="mb-4">{{ theme }}</h2>
-    <img src="{% static 'qr.png' %}">
+    <button type="button" onclick="android()"><img src="{% static 'qr.png' %}"></button>
     <div class="row mt-3">
         <div class="col-2"></div>
         <div class="col-8">
             <form action="" method="get">
                 {% csrf_token %}
-                <button style="border-color:white; color:white" class="mt-3 form-control btn btn-default" onclick="android()" type="submit">힌트 사용</button>
+                <button style="border-color:white; color:white" class="mt-3 form-control btn btn-default" onclick="" type="submit">힌트 사용</button>
                 <h3 class="mt-4 mb-2">HINT COUNT</h3>
                 <h4 class="m-0">{{ count }}</h4>
                 <input style="visibility:hidden;" id="input" name="q" value="{{ q }}" type="text">
@@ -80,6 +80,9 @@
 <script>
     function android(){
         window.Android.capture();
+    }
+    function url(url){
+        document.getElementById("input").value=url;
     }
 
     function openQRCamera(node) {
