--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -83,7 +83,7 @@
     }
     function url(url){
         document.getElementById("input").value=url;
-        location.href=url
+        location.href=url;
     }
 
     function openQRCamera(node) {
@@ -105,7 +105,7 @@
     //function showQRIntro() {
       //return confirm("Use your camera to take a picture of a QR code.");
     //}
-    
+
 
     //$(function(){
     //    $('.camera').change(function(e){
