--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -108,15 +108,15 @@
     //function showQRIntro() {
       //return confirm("Use your camera to take a picture of a QR code.");
     //}
-    function url(){
-        var value = $('#text').val();
-        document.getElementById("input").value=value;
-        if (value == ""){
-            alert("QR 코드를 입력하세요.");
-        }else{
-            location.href=value;
-        }
-    }
+    //function url(){
+    //    var value = $('#text').val();
+    //    document.getElementById("input").value=value;
+    //    if (value == ""){
+    //        alert("QR 코드를 입력하세요.");
+    //    }else{
+    //        location.href=value;
+    //    }
+    //}
 
     //$(function(){
     //    $('.camera').change(function(e){
