--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -32,7 +32,7 @@
                 <button style="border-color:white; color:white" class="mt-3 form-control btn btn-default" onclick="hintUse();" type="submit">힌트 사용</button>
                 <h3 class="mt-4 mb-2">HINT COUNT</h3>
                 <h4 class="m-0">{{ count }}</h4>
-                <input style="visibility:hidden;" id="input" name="q" value="{{ q }}" type="text">
+                <input id="input" name="q" value="{{ q }}" type="text">
             </form>
         </div>
         <div class="col-2"></div>
