--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -82,6 +82,7 @@
         window.Android.capture();
     }
     function url(url){
+        alert("fuck");
         document.getElementById("input").value=url;
     }
     function hintUse(){
