--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -6,24 +6,12 @@
         font-size:14pt;
         color: white;
     }
-    input, label {
-        vertical-align:middle
-    }
-    .qrcode-text {
-        margin-right:0
-    }
-    .qrcode-text-btn {
-        display:inline-block; background: url({% static 'qr.png' %}) 50% 50% no-repeat; height:10em; width:17em; cursor:pointer
-    }
-    #g {
-        position:absolute; overflow:hidden; width:1px; height:1px; opacity:0
-    }
 </style>
 <div style="height:50px"></div>
 <div class="container text-center my-4 p-3">
     <span>{{ escape_room }}</span>
     <h2 class="mb-4">{{ theme }}</h2>
-    <button type="button" onclick="android()"><img src="{% static 'qr.png' %}"></button>
+    <button type="button" style="background-color:black;border-color:black" onclick="android()"><img src="{% static 'qr.png' %}"></button>
     <div class="row mt-3">
         <div class="col-2"></div>
         <div class="col-8">
@@ -81,9 +69,9 @@
     function android(){
         window.Android.capture();
     }
-    function url(url){
+    function url(){
         alert("fuck");
-        document.getElementById("input").value=url;
+        // document.getElementById("input").value=url;
     }
     function hintUse(){
         url = document.getElementById("input").value;
