--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -69,9 +69,9 @@
     function android(){
         window.Android.capture();
     }
-    function url(){
+    function url(url){
         alert("fuck");
-        // document.getElementById("input").value=url;
+        document.getElementById("input").value=url;
     }
     function hintUse(){
         url = document.getElementById("input").value;
