--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -20,7 +20,7 @@
                 <button style="border-color:white; color:white" class="mt-3 form-control btn btn-default" onclick="hintUse();" type="submit">힌트 사용</button>
                 <h3 class="mt-4 mb-2">HINT COUNT</h3>
                 <h4 class="m-0">{{ count }}</h4>
-                <input id="input" name="q" value="{{ q }}" type="text">
+                <input style="visibility:hidden;" id="input" name="q" value="{{ q }}" type="text">
             </form>
         </div>
         <div class="col-2"></div>
@@ -47,12 +47,12 @@
           <p>힌트폰 사용방법<br>
             1. QR코드 이미지를 클릭합니다.<br>
             2. 힌트가 필요한 문제의 QR코드를<br>
-              카메라 프레임에 맞게 촬영합니다.<br>
-            3. 힌트사용 버튼을 클릭합니다.<br>
+              카메라 프레임에 맞게 스캔합니다.<br>
+            3. 스캔 완료 후에 힌트사용 버튼을 클릭합니다.<br>
               <br>
               힌트폰 사용안내<br>
             1. 최대 {{ hintCount }}회까지만 사용이 가능합니다.<br>
-            2. 한번 사용한 힌트는 연속 재생이 가능합니다.<br>
+            2. 한번 사용한 힌트는 카운팅 없이 연속 재생이 가능합니다.<br>
           </p>
       </div>
 
@@ -70,12 +70,15 @@
         window.Android.capture();
     }
     function url(url){
-        alert("fuck");
         document.getElementById("input").value=url;
     }
     function hintUse(){
         url = document.getElementById("input").value;
-        location.href=url;
+        if (url == ""){
+            alert("QR코드를 스캔하세요.");
+        }else{
+            location.href=url;
+        }
     }
 
     function openQRCamera(node) {
