--- a/ch1/hint/templates/hint/theme_hint.html
+++ b/ch1/hint/templates/hint/theme_hint.html
@@ -208,12 +208,15 @@
 </div>
 
 <div class="text-center">
-    <button style="border-color:white;color:white;width:50%" class="my-4 form-control btn btn-default" onclick="history.back();">다른 힌트 사용하러가기</button>
+    <button style="border-color:white;color:white;width:50%" class="my-4 form-control btn btn-default" onclick="back();">다른 힌트 사용하러가기</button>
 </div>
 <script>
     history.pushState(null, null, location.href);
     window.onpopstate = function () {
         history.go(1);
     };
+    function back(){
+        history.go(-1);
+    }
 </script>
 {% endblock %}
