--- a/ch1/hint/templates/hint/theme_hint.html
+++ b/ch1/hint/templates/hint/theme_hint.html
@@ -208,7 +208,7 @@
 </div>
 
 <div class="text-center">
-    <button style="border-color:white;color:white;width:50%" class="my-4 form-control btn btn-default" onclick="back();">다른 힌트 사용하러가기</button>
+    <button type="button" style="border-color:white;color:white;width:50%" class="my-4 form-control btn btn-default" onclick="back();">다른 힌트 사용하러가기</button>
 </div>
 <script>
     history.pushState(null, null, location.href);
@@ -216,7 +216,7 @@
         history.go(1);
     };
     function back(){
-        history.go(-1);
+        window.history.back();
     }
 </script>
 {% endblock %}
