--- a/ch1/hint/templates/hint/not_hint.html
+++ b/ch1/hint/templates/hint/not_hint.html
@@ -25,7 +25,7 @@
       <!-- Modal body -->
       <div class="modal-body" style="color:black;">
           <p>힌트폰 사용방법<br>
-            1. QR코드 이미지를 클릭합니다.<br>
+            1. QR코드 버튼을 클릭합니다.<br>
             2. 힌트가 필요한 문제의 QR코드를<br>
               카메라 프레임에 맞게 스캔합니다.<br>
             3. 스캔 완료 후에 힌트사용 버튼을 클릭합니다.<br>
