--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -71,7 +71,7 @@
         window.Android.capture();
     }
     function url(url){
-        btn = document.getElementById("hint_btn");
+        var btn = document.getElementById("hint_btn");
         document.getElementById("input").value=url;
         btn.setAttribute('type', 'submit')
     }
