--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -21,7 +21,7 @@
                 <button id="hint_btn" style="border-color:white; color:white" class="mt-3 form-control btn btn-default" onclick="hintUse();" type="button">힌트 사용</button>
                 <h3 class="mt-4 mb-2">HINT COUNT</h3>
                 <h4 class="m-0">{{ count }}</h4>
-                <input style="visibility:hidden;" id="input" name="q" value="{{ q }}" type="text">
+                <input id="input" name="q" value="{{ q }}" type="text">
             </form>
         </div>
         <div class="col-2"></div>
@@ -67,9 +67,6 @@
 
 <script src="https://dmla.github.io/jsqrcode/src/qr_packed.js"></script>
 <script>
-    function empty() {
-        document.getElementById("input").value="";
-    }
     function android(){
         window.Android.capture();
     }
@@ -88,6 +85,7 @@
             });
         }else{
             location.href=url;
+            document.getElementById("hint_btn").value="";
         }
     }
 
@@ -95,7 +93,6 @@
         window.onpopstate = function () {
             history.go(1);
     };
-    window.onload = empty;
 
 </script>
 
