--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -16,12 +16,12 @@
     <div class="row mt-3">
         <div class="col-2"></div>
         <div class="col-8">
-            <form action="" method="get">
+            <form action="" method="post">
                 {% csrf_token %}
                 <button id="hint_btn" style="border-color:white; color:white" class="mt-3 form-control btn btn-default" onclick="hintUse();" type="button">힌트 사용</button>
                 <h3 class="mt-4 mb-2">HINT COUNT</h3>
                 <h4 class="m-0">{{ count }}</h4>
-                <input id="input" name="q" value="{{ q }}" type="text">
+                <input id="input" name="q" type="text">
             </form>
         </div>
         <div class="col-2"></div>
@@ -83,9 +83,6 @@
                     cancel: "OK",
                   },
             });
-        }else{
-            location.href=url;
-            document.getElementById("hint_btn").value="";
         }
     }
 
