--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -16,12 +16,12 @@
     <div class="row mt-3">
         <div class="col-2"></div>
         <div class="col-8">
-            <form action="" method="post">
+            <form action="" method="get">
                 {% csrf_token %}
                 <button id="hint_btn" style="border-color:white; color:white" class="mt-3 form-control btn btn-default" onclick="hintUse();" type="button">힌트 사용</button>
                 <h3 class="mt-4 mb-2">HINT COUNT</h3>
                 <h4 class="m-0">{{ count }}</h4>
-                <input id="input" name="q" type="text">
+                <input id="input" name="q" value="{{ q }}" type="text">
             </form>
         </div>
         <div class="col-2"></div>
@@ -67,13 +67,16 @@
 
 <script src="https://dmla.github.io/jsqrcode/src/qr_packed.js"></script>
 <script>
+    window.onload = function(){
+        document.getElementById("hint_btn").btn.setAttribute('type', 'button');
+    }
     function android(){
         window.Android.capture();
     }
     function url(url){
         var btn = document.getElementById("hint_btn");
         document.getElementById("input").value=url;
-        btn.setAttribute('type', 'submit')
+        btn.setAttribute('type', 'submit');
     }
     function hintUse(){
         url = document.getElementById("input").value;
@@ -83,6 +86,8 @@
                     cancel: "OK",
                   },
             });
+        }else{
+            location.href=url;
         }
     }
 
