--- a/ch1/hint/templates/hint/reset_code.html
+++ b/ch1/hint/templates/hint/reset_code.html
@@ -25,7 +25,7 @@
                 <button type="submit" class="form-control btn btn-default mt-4" style="border-color: white;color:white">ENTER</button>
             </form>
             <button type="button" onclick="location.href='{% url 'hint:QR_code' user_id theme %}'" class="form-control btn btn-default mt-2" style="border-color: white;color:white">관리자가 아닐시 돌아가기</button>
-            <h3 id="not"></h3>
+            <h3 class="mt-3" style="color:white" id="not"></h3>
         </div>
     </div>
 </div>
