--- a/ch1/hint/templates/hint/qr.html
+++ b/ch1/hint/templates/hint/qr.html
@@ -68,8 +68,7 @@
 <script src="https://dmla.github.io/jsqrcode/src/qr_packed.js"></script>
 <script>
     window.onload = function(){
-        document.getElementById("input").value = "";
-        document.getElementById("hint_btn").setAttribute('type', 'button');
+        window.location.reload();
     }
     function android(){
         window.Android.capture();
